修改了升级到java14时，base64的错误